# rusty_ffmpeg

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
rusty_ffmpeg/: build.rs
rusty_ffmpeg_linking/: Cargo.toml  build.rs
rusty_ffmpeg_linking/src/: lib.rs
