[package]
name = "rusty_ffmpeg_linking"
version = "0.1.0"
authors = ["ldm0 <ldm2993593805@163.com>"]
edition = "2018"

license = "MIT"
description = "A library that helps FFmpeg library linking"
homepage = "https://github.com/CCExtractor/rusty_ffmpeg/"
documentation = "https://docs.rs/rusty_ffmpeg_link"
repository = "https://github.com/CCExtractor/rusty_ffmpeg/"
readme = "README.md"

keywords = ["ffmpeg", "ffi", "binding", "video", "audio"]
categories = ["external-ffi-bindings", "multimedia"]

exclude = [
    ".github",
    # Should we exclude examples file? I see <https://github.com/rust-lang/git2-rs/> haven't exclude it.
    # "examples"
]
build = "build.rs"

# Doc test of generated binding is non-sense https://github.com/rust-lang/cargo/issues/3720
[lib]
doctest = false

[dependencies]
rusty_ffmpeg = { path = "../rusty_ffmpeg" }
once_cell = "1.4.1"
libc = "0.2.79"

[build-dependencies]
once_cell = "1.4.1"
pkg-config = "0.3.19"
vcpkg = "0.2.10"
num_cpus = "1.13.0"
